--- a/src/app/admin/articulos/articulos.component.html
+++ b/src/app/admin/articulos/articulos.component.html
@@ -21,13 +21,18 @@
 
     <div style="margin-top: 9px">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
-        <!-- ID Column -->
+        <!-- sku Column -->
+        <ng-container matColumnDef="sku">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>SKU</th>
+          <td mat-cell *matCellDef="let row">{{ row.sku }}</td>
+        </ng-container>
+
         <ng-container matColumnDef="articulo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Artículo</th>
           <td mat-cell *matCellDef="let row">{{ row.articulo }}</td>
         </ng-container>
 
-        <!-- Progress Column -->
+
         <ng-container matColumnDef="precio">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
           <td mat-cell *matCellDef="let row">
@@ -35,7 +40,6 @@
           </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="stock">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Cantidad Disponibles
