--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
               *ngIf="esAdmin"
             >
               <mat-icon matListIcon>view_list</mat-icon>
-              <span class="mat-h4" matLine>TODOS LOS PEDIDOS</span>
+              <span class="mat-h4" matLine>PEDIDOS</span>
             </mat-list-item>
             <mat-list-item
               (click)="redirectTo('/admin/usuarios')"
