--- a/src/app/admin/usuarios/usuario-pedidos/usuario-pedido-articulos/usuario-pedido-articulos.component.html
+++ b/src/app/admin/usuarios/usuario-pedidos/usuario-pedido-articulos/usuario-pedido-articulos.component.html
@@ -15,14 +15,20 @@
     <td mat-footer-cell *matFooterCellDef> PRECIO TOTAL </td>
   </ng-container>
 
+
+  <ng-container matColumnDef="precio_unitario">
+    <th mat-header-cell *matHeaderCellDef> Precio Unitario </th>
+    <td mat-cell *matCellDef="let articulo"> <span class="mat-small">{{articulo.precio_unitario | formatoMoneda}}</span> </td>
+    <td mat-footer-cell *matFooterCellDef> </td>
+  </ng-container>
   <ng-container matColumnDef="cantidad">
     <th mat-header-cell *matHeaderCellDef> Cantidad </th>
     <td mat-cell *matCellDef="let articulo"> <span class="mat-small">{{articulo.cantidad}}</span> </td>
     <td mat-footer-cell *matFooterCellDef>  </td>
   </ng-container>
-  <ng-container matColumnDef="precio_unitario">
-    <th mat-header-cell *matHeaderCellDef> Precio Unitario </th>
-    <td mat-cell *matCellDef="let articulo"> <span class="mat-small">{{articulo.precio_unitario | formatoMoneda}}</span> </td>
+  <ng-container matColumnDef="subtotal">
+    <th mat-header-cell *matHeaderCellDef> Subtotal</th>
+    <td mat-cell *matCellDef="let articulo"> <span class="mat-small">{{articulo.precio_unitario * articulo.cantidad | formatoMoneda}}</span> </td>
     <td mat-footer-cell *matFooterCellDef> </td>
   </ng-container>
   <ng-container matColumnDef="descuento">
