--- a/src/app/admin/articulos/articulos.component.html
+++ b/src/app/admin/articulos/articulos.component.html
@@ -280,7 +280,7 @@
                     </div>
                     <div style="width: 100%">
                       <p class="mat-small" style="text-align: end">
-                        Publicado: {{ element.fecha_creacion | formatoFecha }}
+                        Publicado el {{ element.fecha_creacion | formatoFecha }}
                       </p>
                     </div>
                     <div style="width: 100%">
