--- a/src/app/admin/pedidos/pedidos.component.html
+++ b/src/app/admin/pedidos/pedidos.component.html
@@ -8,9 +8,14 @@
   fxLayoutAlign="center"
 >
   <div style="margin-top: 20px" fxFlex="1300px">
-    <h1 class="mat-display-1" style="font-weight: 600; margin: 0px 0px 20px 0px;">PEDIDOS</h1>
+    <h1
+      class="mat-display-1"
+      style="font-weight: 600; margin: 0px 0px 20px 0px"
+    >
+      PEDIDOS
+    </h1>
     <mat-form-field appearance="fill" floatLabel="always">
-      <mat-label>Buscar Artículo</mat-label>
+      <mat-label>Buscar pedido</mat-label>
       <input
         matInput
         (keyup)="applyFilter($event)"
@@ -22,35 +27,36 @@
     <div style="margin-top: 9px">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
         <!-- sku Column -->
-        <ng-container matColumnDef="sku">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>SKU</th>
-          <td mat-cell *matCellDef="let row">{{ row.sku }}</td>
+        <ng-container matColumnDef="id_pedido">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+          <td mat-cell *matCellDef="let row" style="padding: 20px;">{{ row.id_pedido }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="articulo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Artículo</th>
-          <td mat-cell *matCellDef="let row">{{ row.articulo }}</td>
-        </ng-container>
+        <!-- <ng-container matColumnDef="nombre_completo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE COMPLETO</th>
+          <td mat-cell *matCellDef="let row">{{ row.nombre_completo | uppercase }}</td>
+        </ng-container> -->
 
-
-        <ng-container matColumnDef="precio">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
+        <ng-container matColumnDef="fecha_pedido">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            FECHA Y HORA DEL PEDIDO
+          </th>
           <td mat-cell *matCellDef="let row">
-            {{ row.precio | formatoMoneda }}
+            {{ row.fecha_pedido | formatoFecha }}
           </td>
         </ng-container>
-
-        <ng-container matColumnDef="stock">
+        <ng-container matColumnDef="pedido_estado">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Cantidad Disponibles
+            ESTADO ACTUAL DEL PEDIDO
           </th>
-          <td mat-cell *matCellDef="let row">{{ row.stock }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="descuento">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Descuento</th>
           <td mat-cell *matCellDef="let row">
-            {{ row.descuento ? row.descuento + "%" : "0%" }}
+            <span
+              style="padding: 11px; border-radius: 30px; font-weight: 500"
+              [style.background-color]="'rgb(' + row.estado_color + ')'"
+              [style.color]="setTextColor(row.estado_color)"
+            >
+              {{ row.pedido_estado | uppercase }}
+            </span>
           </td>
         </ng-container>
 
@@ -67,282 +73,59 @@
                 element == expandedElement ? 'expanded' : 'collapsed'
               "
               fxLayout="row wrap"
+              style="background-color: whitesmoke; border-radius: 50px"
             >
-              <div style="width: 100%" fxLayout="row">
-                <div class="img-container" fxLayout="row" fxLayoutGap="10px">
-                    <img
-                    [src]="imgDomain + element.imagen"
-                    alt=""
-                    height="100%"
-                  />
-                  <div fxFlex="1 1 auto" style="height: 100%;" fxLayout="column">
-                    <div style="width: 100%" fxFlex="1 1 auto">
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-sku',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          SKU:
-                          <span class="mat-body-strong">{{
-                            element.sku
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-articulo',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          ARTÍCULO:
-                          <span class="mat-body-strong">{{
-                            element.articulo
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-precio',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          PRECIO:
-                          <span class="mat-body-strong">{{
-                            element.precio | formatoMoneda
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-stock',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          CANTIDAD:
-                          <span class="mat-body-strong">{{
-                            element.stock
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-descuento',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          DESCUENTO:
-                          <span class="mat-body-strong">{{
-                            element.descuento ? element.descuento + "%" : ""
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-marca',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          MARCA:
-                          <span class="mat-body-strong">{{
-                            element.marca
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-categoria',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          CATEGORÍA:
-                          <span class="mat-body-strong">{{
-                            element.categoria
-                          }}</span>
-                        </p>
-                      </div>
-                      <div
-                        fxLayout="row wrap"
-                        fxFlexAlign="center center"
-                        fxLayoutGap="8px"
-                      >
-                        <button
-                          mat-mini-fab
-                          color="accent"
-                          (click)="
-                            openBottomSheet(
-                              'edit-subcategoria',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>edit</mat-icon>
-                        </button>
-                        <p class="mat-body" style="padding-top: 5px">
-                          SUBCATEGORÍA:
-                          <span class="mat-body-strong">{{
-                            element.subcategoria
-                          }}</span>
-                        </p>
-                      </div>
-                    </div>
-                    <div style="width: 100%">
-                      <p class="mat-small" style="text-align: end">
-                        Publicado: {{ element.fecha_creacion | formatoFecha }}
-                      </p>
-                    </div>
-                    <div style="width: 100%">
-                      <mat-divider style="width: 100%"></mat-divider>
+              <!-- <mat-divider fxFlex="100%"></mat-divider> -->
+              <div
+                fxFlex="100%"
+                style="margin: 30px"
+                fxLayout="row wrap"
+                fxLayoutAlign="space-around"
+                fxLayoutGap="8px"
+              >
+                <span
+                  >USUARIO:
+                  <b>{{ element.nombre_completo | uppercase }}</b></span
+                >
+                <span
+                  >TELÉFONO: <b>{{ element.telefono }}</b></span
+                >
+                <span
+                  >CORREO ELECTRÓNICO: <b>{{ element.email }}</b></span
+                >
+              </div>
+              <div fxFlex="100%">
+                <app-usuario-pedido-articulos
+                  [idPedido]="element.id_pedido"
+                ></app-usuario-pedido-articulos>
+              </div>
+              <div fxFlex="100%" style="margin-top: 30px;">
+                <p style="text-align: center;margin: 0px;font-weight: 600;">ESTADO ACTUAL DEL PEDIDO</p>
+                <p style="text-align: center;margin: 0px;" class="mat-small">Seleccione según corresponda para actualizar estado</p>
+              </div>
+              <div
+                fxFlex="100%"
+                style="margin: 30px"
+                fxLayoutAlign="space-around end"
+                fxLayoutGap="16px"
+              >
+              <div
+              fxLayout="column"
+              fxLayoutAlign="start center"
+              *ngFor="let estado of estados"
+            >
+              <p class="mat-small" style="text-align: center" [style.font-weight]="setFontWeight(element.id_pedido_estado,estado.id_pedido_estado)">
+                {{ estado.pedido_estado | uppercase }}
+              </p>
+              <div
+                class="circulo"
+                [style.background-color]="
+                  'rgb(' + setBackgroundColor(element.id_pedido_estado,estado.id_pedido_estado, estado.estado_color) + ')'
+                "
+                (click)="updateDataPrueba(dataSource.filteredData.indexOf(element), estado.id_pedido_estado, estado.estado_color, estado.pedido_estado)"
+              ></div>
+            </div>
 
-                      <div
-                        class="bottom-buttons"
-                        fxLayoutAlign="end center"
-                        fxLayoutGap="10px"
-                      >
-
-                        <button
-                          mat-mini-fab
-                          color="primary"
-                          (click)="
-                            openBottomSheet(
-                              'descripcion',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>notes</mat-icon>
-                        </button>
-                        <button
-                          mat-mini-fab
-                          color="primary"
-                          (click)="
-                            openBottomSheet(
-                              'imagenes',
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>collections</mat-icon>
-                        </button>
-                        <button mat-mini-fab color="warn" (click)="
-                        deleteArticulo(
-                          element.id_articulo,
-                          dataSource.filteredData.indexOf(element)
-                        )
-                      ">
-                          <mat-icon>delete</mat-icon>
-                        </button>
-                        <!-- <button
-                          mat-mini-fab
-                          color="accent"
-                          [matMenuTriggerFor]="menu"
-                          (click)="
-                            updateSelectedArticuloId(
-                              element.id_articulo,
-                              dataSource.filteredData.indexOf(element)
-                            )
-                          "
-                        >
-                          <mat-icon>more_vert</mat-icon>
-                        </button> -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </td>
@@ -357,7 +140,6 @@
           (click)="prueba(row)"
         ></tr>
         <tr
-
           mat-row
           *matRowDef="let row; columns: ['expandedDetail']"
           class="example-detail-row"
@@ -371,9 +153,9 @@
       </table>
 
       <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 50, 100]"
+        [pageSizeOptions]="[5, 10, 20, 30]"
         showFirstLastButtons
-        pageSize="50"
+        pageSize="20"
       ></mat-paginator>
     </div>
   </div>
